--- a/first project/css/style.css
+++ b/first project/css/style.css
@@ -112,3 +112,41 @@ a{
     font-size: 2.5vw;
     color: #858585;
 }
+
+/*  services content */
+
+    /*style icons in the services content  */
+.icon::before{
+    font-family: FontAwesome;
+    font-style: normal;
+}
+.color-blue{
+    color:#ffffff;
+    background-color: #3cadd4;
+}
+.color-green{
+    color:#ffffff;
+    background-color: #add43c;
+}
+.color-red{
+    color:#ffffff;
+    background-color: #d43c61;
+}
+.big{
+    font-size: 35px;
+    padding: 35px 50px;
+    border-radius: 100%;
+}
+
+/* -------  go to style boxs in the services content class*/
+    .box{
+        background-color: #fff;
+        padding: 70px 30px;
+        border-radius: 4px;
+        width: calc(100% /3 - 83px);
+        border: solid 1px rgba(144, 144, 144, 0.25);
+        margin: 0px 10px;
+    }
+.services-content>*{
+    float: left;
+}
