--- a/first project/css/style.css
+++ b/first project/css/style.css
@@ -11,7 +11,7 @@ body{
     font-family: "Raleway", Helvetica, sans-serif;
     color: #444;
 }
-h1,h2{
+h1,h2,h3, h4, h5{
     font-family: "Raleway";
 }
 a{
@@ -116,7 +116,7 @@ a{
 /*  services content */
 
     /*style icons in the services content  */
-.icon::before{
+.icon:before{
     font-family: FontAwesome;
     font-style: normal;
 }
@@ -139,14 +139,28 @@ a{
 }
 
 /* -------  go to style boxs in the services content class*/
-    .box{
-        background-color: #fff;
-        padding: 70px 30px;
-        border-radius: 4px;
-        width: calc(100% /3 - 83px);
-        border: solid 1px rgba(144, 144, 144, 0.25);
-        margin: 0px 10px;
-    }
+.box{
+    background-color: #fff;
+    padding: 70px 30px;
+    border-radius: 4px;
+    width: calc(100% /3 - 83px);
+    border: solid 1px rgba(144, 144, 144, 0.25);
+    margin: 0px 10px;
+}
 .services-content>*{
     float: left;
+}
+.services-content::after,
+.services-content::before{
+    content: '';
+    display: block;
+    clear: both;
+}
+.box h4{
+    color: #858585;
+    font-size: 2.5vw;
+    margin: 60px 0px 30px 0px;
+}
+.box p{
+    line-height: 25px
 }
