--- a/second-project/css/style.css
+++ b/second-project/css/style.css
@@ -21,11 +21,13 @@ a:hover > b{
 .clear-fix{
     clear: both;
 }
-.positon-ralative{
+.positon-relative{
     position: relative;
 }
+
 .positon-absolute{
     position: absolute;
+    bottom: 0;
 }
 /* style class title  */
 .title{
@@ -76,7 +78,7 @@ a:hover > b{
 .text-muted{
     color: #888;
 }
-.text-yello{
+.text-yellow{
     color: #F9B500 ;
 }
 .show{
@@ -103,14 +105,99 @@ a:hover > b{
     font-weight: 700;
     color: #333;
 }
-.heder-menu-burger{
+.header-menu-burger{
     display: none;
     float:right;
     background-color: white;
     border: none;
     margin-top: 30px;
 }
-
+/* ------------------------------- style  content class -------------------------- */
+/*-------------- style intro calss ------------- */
+.intro-h-600px{
+    height: 600px ;
+}
+.intro-row{
+    width: 100%;
+}
+.intro-h-100{
+    height: 100%;
+}
+.intro-h-2-3{
+    height: calc(200% / 3);
+}
+.intro-h-1-3{
+    height: calc(100% / 3);
+}
+.intro-h-50:first-of-type{
+    margin-bottom: 10px;
+}
+.intro-h-50{
+    height: calc(50% - 5px);
+}
+.intro-2-3-col{
+    float: left;
+    margin-right: 10px;
+    width: calc( 200% / 3 - 10px);
+    height: 100%;
+}
+.intro-1-3-col{
+    float: right;
+    width: calc(100% / 3);
+}
+.intro-1-3-item{
+    width: 100%;
+}
+.intro-1-3-col-item{
+    width: calc(100% / 3);
+    float: left;
+}
+.intro-1-3-col-item:nth-of-type(2){
+    margin-left: 10px;
+    margin-right: 10px;
+    width: calc(100% / 3 - 20px);
+}
+.intro-item-caption{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 10;
+}
+.caption-title{
+    position: absolute;
+    bottom: 50px;
+    left: 20px;
+}
+.caption-title span{
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+}
+.caption-title b{
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+}
+.caption-into-bar{
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    padding: 0;
+}
+.caption-into-bar li{
+    display: inline-block;
+    margin-right: 20px;
+    color: #fff;
+}
+.bg-1{background: url("../images/slider-1-1200x900.jpg")  no-repeat center center; background-size: cover;}
+.bg-2{background: url('../images/slider-2-450x600.jpg')   no-repeat center center; background-size: cover;}
+.bg-3{background: url('../images/slider-3-450x600.jpg')   no-repeat center center; background-size: cover;}
+.bg-4{background: url('../images/slider-4-450x600.jpg')   no-repeat center center; background-size: cover;}
+.bg-5{background: url('../images/slider-5-450x600.jpg')   no-repeat center center; background-size: cover;}
+.bg-6{background: url('../images/slider-6-450x600.jpg')   no-repeat center center; background-size: cover;}
 
 /* medias */
 @media (max-width:1199.99px){
@@ -130,7 +217,7 @@ a:hover > b{
     .app{
         width: 769px;
     }
-    /* style header */
+    /*--------------- style header ---------------*/
     .header-logo{
         height: 15px;
         margin: 32px 0px;
@@ -141,7 +228,7 @@ a:hover > b{
         width: 576px;
     }
     /*----------- style header ------------*/
-    .heder-menu-burger{
+    .header-menu-burger{
         display: inline-block;
     }
     .header-menu{
@@ -150,7 +237,7 @@ a:hover > b{
     }
     .header-menu-itme{
         display: block;
-        border-bottom: 1px solid #cecece;
+        border-bottom: 1px solid #cecece;   
     }
 }
 @media (max-width:575.99px) {
