--- a/second-project/css/style.css
+++ b/second-project/css/style.css
@@ -192,6 +192,26 @@ a:hover > b{
     margin-right: 20px;
     color: #fff;
 }
+.img-bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+}
+.mr-10x{
+    margin-right: 10px;
+}
+.ml-10x{
+    margin-left: 10px;
+}
+.mt-10x{
+    margin-top: 10px;
+}
+.mb-10x{
+    margin-bottom: 10px;
+}
 .bg-1{background: url("../images/slider-1-1200x900.jpg")  no-repeat center center; background-size: cover;}
 .bg-2{background: url('../images/slider-2-450x600.jpg')   no-repeat center center; background-size: cover;}
 .bg-3{background: url('../images/slider-3-450x600.jpg')   no-repeat center center; background-size: cover;}
@@ -238,6 +258,44 @@ a:hover > b{
     .header-menu-itme{
         display: block;
         border-bottom: 1px solid #cecece;   
+    }
+    /* ---------------------- style content -------------- */
+    .intro-2-3-col{
+        width: 100%;
+        float: none;
+        margin: 0;
+    }
+    .intro-1-3-col{
+        width: 100%;
+    }
+    .intro-1-3-col-item{
+        float: none;
+        width: 100%;
+    }
+    .intro-1-3-col-item:nth-of-type(2){
+        float: none;
+        width: 100%;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    .intro-h-600px{
+        height: auto;
+    }
+    .intro-h-100{
+        height: auto;
+    }
+    .intro-h-50{
+        height: auto;
+    }
+    .intro-h-2-3{
+        height: auto;
+    }
+    .intro-h-1-3{
+        height: auto;
+    } 
+    .h-md-300px{
+        height: 300px;
+        margin-bottom: 10px;
     }
 }
 @media (max-width:575.99px) {
