--- a/second-project/css/style.css
+++ b/second-project/css/style.css
@@ -264,6 +264,26 @@ a:hover > b{
     text-align: center;
     border-bottom: 1px solid #ffffff;
 }
+.popular-post{
+    width: 100%;
+    margin-bottom: 20px;
+}
+.popular-post-img{
+    float: left;
+    width: 100px;
+    height: 100px;
+    border-radius: 1px;
+}
+.popular-post-title{
+    float: right;
+    margin-left: 20px;
+    width: calc(100% - 120px);
+}
+.popular-post-title h3 a  {
+    font-size: 18px;
+    font-weight: 700;
+}
+
 
 
 /* medias */
