--- a/project-flex-box/style.css
+++ b/project-flex-box/style.css
@@ -46,6 +46,28 @@
     width: 50%;
 }
 
+
+/* ------------------------------------- style photo grid ------------------------------- */
+.photo-grid-container{
+    display: flex;
+    justify-content: center;
+}
+.photo-grid{
+    flex-basis: 900px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+}
+.photo-grid-item{
+    border: 1px solid white;
+    width: 300px;
+    height: 300px;
+}
+
+
+
+
 @media  only screen and (min-width:992px) {
     .header{
         justify-content: space-between;
