--- a/project-flex-box/style.css
+++ b/project-flex-box/style.css
@@ -64,13 +64,48 @@
     width: 300px;
     height: 300px;
 }
-
-
-
+/* ------------------------------ style footer ------------------------------- */
+.footer{
+    display: flex;
+    justify-content: space-between;
+}
+.footer-item{
+    border: 1px solid white;
+    background-color: #5995DA;
+    height: 200px;
+    flex: 1;
+}
+.footer-social img{
+    width: 100%;
+}
+.footer-one, .footer-three{
+    background-color: #D6E9FE;
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-menu{
+    color: #5995DA;
+    cursor: pointer;
+    list-style: none;
+    display: flex;
+    padding: 10px 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.footer-menu-item{
+    margin: 0px 10px;
+}
 
 @media  only screen and (min-width:992px) {
     .header{
         justify-content: space-between;
         flex-flow: row;
+    }
+}
+@media only screen and (max-width:600px){
+    .footer-three{
+        align-items: normal;
     }
 }
