--- a/project-third/css/style.css
+++ b/project-third/css/style.css
@@ -1,4 +1,137 @@
+/* -----------------------------All style -------------------- */
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+a{
+    text-decoration: none;
+    transition: color .2s;
+}
+a:hover{
+    color: #FF4A52;
+}
+li{
+    list-style: none;
+    cursor: pointer;
+    transition: color .2s;
+}
+li:hover{
+    color: #FF4A52;
+}
+ul{
+    margin: 0;
+    padding: 0;
+}
+.d-flex{
+    display: flex !important;
+}
+.w-100{
+    width: 100% !important;
+}
+.w-50{
+    width: 50% !important;
+}
+.row{
+    width: 100%;
+    display: flex;
+}
+.font-15{
+    font-size: 15px;
+}
+
+/* ----------------- style header --------------------  */
+header{
+    background-color: #fff;
+    justify-content: space-between;
+    margin-left: 10px;
+    padding-top: 25px ;
+    position: relative;
+    margin-top: 5px;
+    display: grid !important;
+
+}
+nav ul{
+        display: none;
+}
+nav li {
+
+    margin-right: 30px;
+    font-size: 1.3em;
+    margin-top: 13px;
+}
+
+.search-icon{
+    background-color: #FF4A52;
+    justify-content: center;
+    align-items: center ;
+    width: 25px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 25px;
+    background-color: #FF4A52;
+    font-size: 15px;
+    height: 60px;
+}
+.search-icon a {
+    color: #ffffff;
+}
+.drop-down-menu {
+    justify-content: center;
+    align-items: center;
+    color: #000;
+    width: 25px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0px;
+    background-color: #1eC6B6   ;
+    height: 60px;
+
+}
+.header{
+    display: grid !important;
+    grid-template-areas:  'logo icon' 'nav nav';
+
+}
+.logo{
+    grid-area: logo;
+}
+.header nav{
+    grid-area: nav;
+}
+.icon{
+    grid-area: icon
+}
+
+.header-menu-nav{
+    grid-column: 1/3;
+}
+
+.header-menu-nav li{
+    border-bottom: 1px solid #ccc;
+    padding: 10px 5px;
+    margin-left: 10px;
+}
+
+.h-50x-raletive{
+    height: 69px;
+    position: relative;
+    bottom: 399px;
+}
+.nav-item{
+    border-bottom: 1px solid #ccc;
+    padding: 10px ;
+}
+.direction-column{
+    flex-direction: column;   
+    margin-left:10px ;  
+}
+.show-nav{
+    display : block;
 }
