--- a/To-DoProject/style.css
+++ b/To-DoProject/style.css
@@ -2,5 +2,90 @@
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  box-sizing: border-box;   
+  box-sizing: border-box; 
+}
+.container{
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(135deg, #153677, #4e085f);
+    padding: 10px;
+}
+.todo-app{
+    width: 100%;
+    max-width: 540px;
+    background: #fff;
+    margin: 100px auto 20px;
+    padding: 40px 20px 70px;
+    border-radius: 10px;
+
+}
+.todo-app h2{
+    display: flex;
+    align-items: center;
+    color: #002765;
+    border-bottom: 20px ;
+    user-select: none;
+}
+.todo-app img{
+    width: 30px;
+    margin-left: 10px ;
+    user-select: none;
+}
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #edeef0;
+    border-radius: 30px;
+    padding-left: 30px;
+    margin-bottom: 25px;
+}
+.row input{
+    flex: 1;
+    border: none;
+    background: transparent;
+    outline: none;
+    padding: 10px;
+    font-weight: bold;
+    font-size: 20px;
+    color: #504e4e;
+}
+.row button{
+    border: none;
+    outline: none;
+    padding: 16px 50px ;
+    background: #ff5945;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 40px;
+    user-select: none;
+}
+ul li{
+    list-style: none;
+    font-size: 17px ;
+    padding: 12px 8px 12px 50px;
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+}
+ul li::before{
+    content: '';
+    position: absolute;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-image: url(images/unchecked.png);
+    background-size: cover;
+    background-position: center;
+    top: 9px;
+    left: 8px;
+}
+ul  li.checked{
+    color: #555;
+    text-decoration: line-through;
+}
+ul li.checked::before{
+    background-image: url(images/checked.png);
+
 }
