--- a/To-DoProject/style.css
+++ b/To-DoProject/style.css
@@ -25,6 +25,7 @@
     color: #002765;
     border-bottom: 20px ;
     user-select: none;
+    margin-bottom: 20px;
 }
 .todo-app img{
     width: 30px;
@@ -88,4 +89,19 @@ ul  li.checked{
 ul li.checked::before{
     background-image: url(images/checked.png);
 
+}
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+ul li span:hover{
+    background: #edeef0;
 }
