--- a/ImageSearchEngine/style.css
+++ b/ImageSearchEngine/style.css
@@ -21,6 +21,7 @@ form{
     background: #434989;
     display: flex;
     align-items: center;
+    border-radius: 8px;
 }
 form input{
     flex: 1;
@@ -30,5 +31,34 @@ form input{
     background: transparent;
     color: #fff;
     font-size: 18px;
-    padding: 0 30px;
+    padding: 0 30px ;
+}
+
+form button{
+    padding: 0 40px;
+    height: 100%;
+    color: #fff;
+    background: #ff3929;
+    font-size: 18px;
+    border: 0;
+    outline: 0;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    cursor: pointer;
+}
+
+::placeholder{
+    color: #fff;
+    font-size: 18px;
+}
+#show-more-btn{
+    background: #ff3929;
+    border: 0;
+    outline: 0;
+    padding: 10px 20px;
+    border-radius: 4px;
+    margin: 10px auto 100px;
+    cursor: pointer;
+    display: none;
+    color: #ffffff ;
 }
